--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "passport-local": "^1.0.0",
     "socket.io": "^4.7.4",
     "tesseract.js": "^5.0.4",
-    "translate": "^2.0.2"
+    "translate": "^2.0.2",
+    "web-push": "^3.6.7"
   }
 }
